--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,9 +5,9 @@
   "version": "0.1",
   "description": "Automates the clicking-buttons process for the Microsoft 2FA.",
   "icons": {
-    "16": "assets/icons/icon16.png",
-    "48": "assets/icons/icon48.png",
-    "128": "assets/icons/icon128.png"
+    "16": "assets/icons/16.png",
+    "48": "assets/icons/48.png",
+    "128": "assets/icons/128.png"
   },
   "permissions": [],
   "content_scripts": [
