Updated the name of extension

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "matoruru/chrome-extensions-auto-microsoft-2fa",
+  "name": "Auto Microsoft 2FA",
   "action": {},
   "manifest_version": 3,
   "version": "0.1",
